Added additional unit tests for single type nested resources and mixed ones