@@ -2,7 +2,6 @@ package uk.nhs.adaptors.pss.translator.util;
 
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.hl7.v3.RCMRMT030101UK04Component02;
@@ -17,7 +16,7 @@ public class CompoundStatementUtil {
             .stream()
             .flatMap(CompoundStatementUtil::flatten)
             .filter(checker::apply)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public static List<?> extractResourcesFromCompound(RCMRMT030101UK04CompoundStatement compoundStatement,
@@ -31,7 +30,8 @@ public class CompoundStatementUtil {
     private static Stream<RCMRMT030101UK04Component02> flatten(RCMRMT030101UK04Component02 component02) {
         return Stream.concat(
             Stream.of(component02),
-            component02.hasCompoundStatement() ? component02.getCompoundStatement().getComponent().stream().flatMap(CompoundStatementUtil::flatten) : Stream.empty()
+            component02.hasCompoundStatement()
+                ? component02.getCompoundStatement().getComponent().stream().flatMap(CompoundStatementUtil::flatten) : Stream.empty()
         );
     }
 }
